--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -154,3 +154,5 @@ obj-$(CONFIG_FELICA) += felica/
 ifeq (1, $(shell if [ -d ./drivers/exfat ]; then echo 1; fi))
 obj-y   += exfat/
 endif
+
+obj-y 				+= exfat/
