--- a/arch/arm/configs/bestmjh47_defconfig
+++ b/arch/arm/configs/bestmjh47_defconfig
@@ -1,5 +1,6 @@
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-ActiveKernel-Multiboot-v3.5"
+CONFIG_KSM=y
 # F2FS support
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_STAT_FS=y
