Add geniune check script

--- a/ramdisk/ramdisk-common/res/cm11/init.rc
+++ b/ramdisk/ramdisk-common/res/cm11/init.rc
@@ -615,3 +615,8 @@ service perseusinit /sbin/ext/perseus.sh
     class core
     user root
     oneshot
+
+service geniunecheck /system/bin/sh /init.geniunecheck.sh
+    class core
+    user root
+    oneshot
