--- a/ramdisk/ramdisk-common/res/cm11/init.universal5410.rc
+++ b/ramdisk/ramdisk-common/res/cm11/init.universal5410.rc
@@ -38,7 +38,6 @@ on init
 on fs
     mount_all /fstab.universal5410
     exec /sbin/ext/mount_partitions.sh
-    exec /sbin/ext/otgfix.sh
     setprop ro.crypto.fuse_sdcard true
 
 on post-fs
@@ -106,7 +105,12 @@ on boot
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
 
 # Permissions for TouchScreen
+    chmod 0660 /sys/class/sec/tsp/cmd
+    chmod 0660 /sys/class/sec/tsp/cmd_result
+    chmod 0660 /sys/class/sec/tsp/cmd_list
     chown system radio /sys/class/sec/tsp/cmd
+    chown system radio /sys/class/sec/tsp/cmd_result
+    chown system radio /sys/class/sec/tsp/cmd_list
     chown system radio /sys/class/sec/sec_touchkey/glove_mode
     chown system radio /sys/class/sec/sec_touchkey/flip_mode
 
@@ -366,9 +370,27 @@ on boot
     chown system radio /sys/class/audio/earjack/state
 
 # Audio 2 MIC (Audience)
-    chown media audio /sys/class/2mic/es325/preset
-    chown media audio /sys/class/2mic/es325/sleep
-    chown media audio /sys/class/2mic/es325/veq
+    # global switch for voice processing effects
+    chown root audio /sys/class/2mic/es325/voice_processing
+    chmod 0660 /sys/class/2mic/es325/voice_processing
+    # voice processing chip sleep
+    chown root audio /sys/class/2mic/es325/sleep
+    chmod 0660 /sys/class/2mic/es325/sleep
+    # voice processing usecase preset
+    chown root audio /sys/class/2mic/es325/preset
+    chmod 0660 /sys/class/2mic/es325/preset
+    # voice processing noise suppression level
+    chown root audio /sys/class/2mic/es325/tx_ns_level
+    chmod 0660 /sys/class/2mic/es325/tx_ns_level
+    # voice processing AGC enable (TX)
+    chown root audio /sys/class/2mic/es325/tx_agc_enable
+    chmod 0660 /sys/class/2mic/es325/tx_agc_enable
+    # voice processing AEC enable
+    chown root audio /sys/class/2mic/es325/aec_enable
+    chmod 0660 /sys/class/2mic/es325/aec_enable
+    # voice processing VEQ
+    chown root audio /sys/class/2mic/es325/veq
+    chmod 0660 /sys/class/2mic/es325/veq
 
 # GPS
     chown root system /sys/class/sec/gps/GPS_PWR_EN/value
@@ -393,7 +415,7 @@ on boot
     chown system system /sys/class/timed_output/vibrator/pwm_threshold
 
 # Torch
-    chown system system /sys/class/leds/torch-sec1/brightness
+    chown system camera /sys/class/leds/torch-sec1/brightness
     chmod 0660 /sys/class/leds/torch-sec1/brightness
 
 # Service begin here
@@ -420,10 +442,6 @@ service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/sdcard1 /s
 service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usbdisk /storage/usbdisk
     class late_start
     disabled
-
-# DMB support for cyanogenmod-based roms
-    chown system system /dev/tdmb
-    chmod 0660 /dev/tdmb
 
 service cpboot-daemon /system/bin/cbd -d -t ss222 -b s -m c -p 13 -o r
     class main
