cm12: initial support for kexec-like feature

--- a/ramdisk/ramdisk-common/res/cm12/init.rc
+++ b/ramdisk/ramdisk-common/res/cm12/init.rc
@@ -658,7 +658,7 @@ service perseusinit /sbin/ext/perseus.sh
     user root
     oneshot
 
-#service geniunecheck /system/bin/sh /init.geniunecheck.sh
+service geniunecheck /system/bin/sh /init.geniunecheck.sh
     class core
     user root
     oneshot
