--- a/arch/arm/configs/bestmjh47_defconfig
+++ b/arch/arm/configs/bestmjh47_defconfig
@@ -213,7 +213,7 @@ CONFIG_CFG80211_WEXT=y
 CONFIG_CFG80211_ALLOW_RECONNECT=y
 CONFIG_WLAN=y
 CONFIG_WIFI_CONTROL_FUNC=y
-CONFIG_BCM4335=y
+CONFIG_BCM4335=m
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 
 # vpn enable
