defconfig : switch ramdisk compression to LZMA

--- a/arch/arm/configs/bestmjh47_defconfig
+++ b/arch/arm/configs/bestmjh47_defconfig
@@ -9,6 +9,10 @@ CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_CHECK_FS=y
 
+# Ramdisk LZMA support
+CONFIG_RD_LZMA=y
+CONFIG_DECOMPRESS_LZMA=y
+
 CONFIG_ALWAYS_ENFORCE=n
 
 CONFIG_LOCALVERSION_AUTO=n 
