--- a/ramdisk/ramdisk-common/res/cm12/init.universal5410.rc
+++ b/ramdisk/ramdisk-common/res/cm12/init.universal5410.rc
@@ -37,7 +37,6 @@ on init
 
 on fs
     mount_all /fstab.universal5410
-    exec /sbin/ext/mount_partitions.sh
     setprop ro.crypto.fuse_sdcard true
 
 on post-fs
@@ -443,7 +442,7 @@ service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usbdisk /s
     class late_start
     disabled
 
-service cpboot-daemon /system/bin/cbd -d -t ss222 -b s -m c -p 13 -o r
+service cpboot-daemon /system/bin/cbd -d -txmm626 -bh -mh -p 13
     class main
     user root
     group radio cache inet misc audio sdcard_rw log sdcard_r shell
