--- a/ramdisk/ramdisk-common/res/cm12/init.universal5410.rc
+++ b/ramdisk/ramdisk-common/res/cm12/init.universal5410.rc
@@ -35,21 +35,6 @@ on init
 
     symlink /sys/devices/platform/s5p-ehci/ehci_power /dev/ehci_power
 
-on charger
-    # Disable extra CPUs
-    write /sys/devices/system/cpu/cpu1/online 0
-    write /sys/devices/system/cpu/cpu2/online 0
-    write /sys/devices/system/cpu/cpu3/online 0
-    chmod 444 /sys/devices/system/cpu/cpu1/online
-    chmod 444 /sys/devices/system/cpu/cpu2/online
-    chmod 444 /sys/devices/system/cpu/cpu3/online
-
-    # CPU Frequency Governor
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
-
-    # EHCI runtime enable for LPA
-    write /sys/devices/platform/s5p-ehci/power/control auto
-
 on fs
     mount_all /fstab.universal5410
     exec /sbin/ext/mount_partitions.sh
@@ -435,11 +420,6 @@ on boot
 
 # Service begin here
 
-service charger /sbin/healthd -c
-    class charger
-    critical
-    seclabel u:r:healthd:s0
-
 # Set watchdog timer to 30 seconds and pet it every 10 seconds to get a 20 second margin
 service watchdogd /sbin/watchdogd 10 20
     class core
@@ -463,7 +443,7 @@ service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usbdisk /s
     class late_start
     disabled
 
-service cpboot-daemon /system/bin/cbd -d -txmm626 -bh -mh -p 13
+service cpboot-daemon /system/bin/cbd -d -t ss222 -b s -m c -p 13 -o r
     class main
     user root
     group radio cache inet misc audio sdcard_rw log sdcard_r shell
