--- a/ramdisk/ramdisk-common/res/sec50/init.usb.rc
+++ b/ramdisk/ramdisk-common/res/sec50/init.usb.rc
@@ -8,9 +8,6 @@ on post-fs-data
     chmod 0660 /sys/class/android_usb/android0/f_mass_storage/lun/file
     chown system system /sys/class/android_usb/android0/f_rndis/ethaddr
     chmod 0660 /sys/class/android_usb/android0/f_rndis/ethaddr
-    chown system system /sys/class/android_usb/android0/usb30en
-    chmod 0660 /sys/class/android_usb/android0/usb30en
-
 
 # Used to disable USB when switching states
 on property:sys.usb.config=none
@@ -20,12 +17,12 @@ on property:sys.usb.config=none
     setprop sys.usb.state ${sys.usb.config}
 
 # adb only USB configuration
-# This should only be used during device bringup
-# and as a fallback if the USB manager fails to set a standard configuration
+# This is the fallback configuration if the
+# USB manager fails to set a standard configuration
 on property:sys.usb.config=adb
     write /sys/class/android_usb/android0/enable 0
     write /sys/class/android_usb/android0/idVendor 18d1
-    write /sys/class/android_usb/android0/idProduct D002
+    write /sys/class/android_usb/android0/idProduct 4EE7
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
     start adbd
