--- a/arch/arm/configs/bestmjh47_defconfig
+++ b/arch/arm/configs/bestmjh47_defconfig
@@ -217,9 +217,7 @@ CONFIG_CFG80211_WEXT=y
 CONFIG_CFG80211_ALLOW_RECONNECT=y
 CONFIG_WLAN=y
 CONFIG_WIFI_CONTROL_FUNC=y
-CONFIG_BCM4335=y
-CONFIG_BCMDHD_FW_PATH="/system/etc/wifi/bcmdhd_sta.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
+CONFIG_BCM4335=m
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 
 # vpn enable
