--- a/ramdisk/ramdisk-common/res/cm12/init.universal5410.rc
+++ b/ramdisk/ramdisk-common/res/cm12/init.universal5410.rc
@@ -481,6 +481,11 @@ service mobicore /system/bin/mcDriverDaemon \
     user system
     group system
 
+# GSM/HSDPA data workaround
+service data_workaround /system/bin/enable_data
+    user root
+    disabled
+
 on property:init.svc.bootanim=stopped
     # start gpsd late to prevent it from changing /data/system
     start gpsd
@@ -488,6 +493,10 @@ on property:init.svc.bootanim=stopped
 
 on property:ro.dumpstate.dmesg=1
     write /proc/sys/kernel/dmesg_restrict 0
+
+# GSM/HSDPA data Workaroud
+on property:gsm.defaultpdpcontext.active=true
+    start data_workaround
 
 #MHL
 on property:ro.debuggable=1
