--- a/arch/arm/configs/bestmjh47_defconfig
+++ b/arch/arm/configs/bestmjh47_defconfig
@@ -651,8 +651,8 @@ CONFIG_AUDIT=y
 CONFIG_SECURITY=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_NETWORK=y
-CONFIG_SECURITY_SELINUX=n
-CONFIG_SECURITY_SELINUX_DISABLE=y
+CONFIG_SECURITY_SELINUX=y
+# CONFIG_SECURITY_SELINUX_DISABLE is not set
 # Support auditd for SE Android
 CONFIG_AUDITSYSCALL=y
 
