--- a/ramdisk/ramdisk-common/res/sec50/init.zygote32.rc
+++ b/ramdisk/ramdisk-common/res/sec50/init.zygote32.rc
@@ -5,4 +5,5 @@ service zygote /system/bin/app_process -Xzygote /system/bin --zygote --start-sys
     onrestart write /sys/power/state on
     onrestart restart media
     onrestart restart netd
+    onrestart restart loc_launcher
 
