--- a/ramdisk/ramdisk-common/res/sec50/init.rc
+++ b/ramdisk/ramdisk-common/res/sec50/init.rc
@@ -11,6 +11,7 @@ import /init.${ro.zygote}.rc
 import /init.trace.rc
 import /init.container.rc
 import /init.rilcarrier.rc
+import /init.selinux.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
@@ -185,6 +186,10 @@ on init
     chown system log /sys/fs/pstore/console-ramoops
     chmod 0440 /sys/fs/pstore/console-ramoops
 
+# reset_reason
+    chown system system /proc/reset_reason
+    chmod 0600 /proc/reset_reason
+
 # Healthd can trigger a full boot from charger mode by signaling this
 # property when the power button is held.
 on property:sys.boot_from_charger_mode=1
@@ -262,12 +267,15 @@ on post-fs-data
     # Reload SE Android Policy
     setprop selinux.reload_policy 1
 
+    # sec_efs_file
+    mkdir /efs/sec_efs 0775 radio system
+
     # We chown/chmod /data again so because mount is run as root + defaults
     chown system system /data
     chmod 0771 /data
     # We restorecon /data in case the userdata partition has been reset.
     restorecon /data
-    restorecon_msc
+    restorecon_recursive /data/media
 
     # Avoid predictable entropy pool. Carry over entropy from previous boot.
     copy /data/system/entropy.dat /dev/urandom
@@ -315,6 +323,7 @@ on post-fs-data
     mkdir /data/misc/jack 0770 jack system
     # give system access to wpa_supplicant.conf for backup and restore
     chmod 0660 /data/misc/wifi/wpa_supplicant.conf
+    chown system wifi /data/misc/wifi/wpa_supplicant.conf
     mkdir /data/local 0751 root root
     mkdir /data/misc/media 0700 media media
 
@@ -711,6 +720,11 @@ on property:sys.powerctl=*
 on property:sys.sysctl.extra_free_kbytes=*
     write /proc/sys/vm/extra_free_kbytes ${sys.sysctl.extra_free_kbytes}
 
+# Activate Background Compaction
+on property:sys.sysctl.compact_memory=1
+    write /proc/sys/vm/compact_memory 1
+    setprop sys.sysctl.compact_memory=0
+
 # "tcp_default_init_rwnd" Is too long!
 on property:sys.sysctl.tcp_def_init_rwnd=*
     write /proc/sys/net/ipv4/tcp_default_init_rwnd ${sys.sysctl.tcp_def_init_rwnd}
@@ -972,6 +986,16 @@ service bootanim /system/bin/bootanimation
     disabled
     oneshot
 
+# bootchecker
+service bootchecker /system/bin/bootchecker
+    class late_start
+    user system
+    group system log
+    oneshot
+
+on property:init.svc.zygote=restarting
+    restart bootchecker
+
 service installd /system/bin/installd
     class main
     socket installd stream 600 system system
@@ -1115,9 +1139,14 @@ service iprenew_bt-pan /system/bin/dhcpcd -n
     oneshot
 # end of BT
 
-
 service stockflash /system/bin/sh /init.dummy.sh
     class core
     user root
     oneshot
+
+service restorexxx /system/bin/sh /init.restore.sh
+    class core
+    user root
+    oneshot
+
 
