--- a/ramdisk/ramdisk-common/res/sec50/ueventd.universal5410.rc
+++ b/ramdisk/ramdisk-common/res/sec50/ueventd.universal5410.rc
@@ -82,4 +82,13 @@
 # Secure MEM driver
 /dev/s5p-smem             0660   system     system
 
+/dev/mdm                  0660   system     radio
+/dev/hsic*                0660   system     radio
+/dev/diag                 0660   system     radio
+
 /dev/block/mmcblk0p8      0660   system     system
+/dev/ks_hsic_bridge       0660   system     system
+/dev/efs_hsic_bridge      0660   system     system
+/dev/block/mmcblk0p4      0660   system     radio
+/dev/block/mmcblk0p5      0660   system     radio
+/dev/block/mmcblk0p6      0660   system     radio
